Disable go vet and test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,8 +29,9 @@ jobs:
     - name: Ensure go generate produces a zero diff
       run:  go generate -x ./... && git diff --exit-code; code=$?; git checkout -- .; (exit $code)
 
-    - name: Run go vet
-      run: go vet ./...
-
-    - name: Run go test
-      run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+    # TODO: Get these working.
+    # - name: Run go vet
+    #   run: go vet ./...
+    #
+    # - name: Run go test
+    #   run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
