--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Get GLFW dependencies - https://github.com/go-gl/glfw/blob/master/README.md
+      run: sudo apt-get install -y libgl1-mesa-dev xorg-dev
+
     - uses: actions/setup-go@v1
       with:
         go-version: ${{ matrix.go-version }}
@@ -29,9 +32,8 @@ jobs:
     - name: Ensure go generate produces a zero diff
       run:  go generate -x ./... && git diff --exit-code; code=$?; git checkout -- .; (exit $code)
 
-    # TODO: Get these working.
-    # - name: Run go vet
-    #   run: go vet ./...
-    #
-    # - name: Run go test
-    #   run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+    - name: Run go vet
+      run: go vet ./...
+
+    - name: Run go test
+      run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
