--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,10 +7,13 @@ jobs:
   linux:
     strategy:
       matrix:
-        go-version: [1.13.x]
+        go-version: [1.14.x]
     runs-on: ubuntu-latest
 
     steps:
+    - name: Perform updates
+      run: sudo apt-get update
+
     - name: Get GLFW dependencies - https://github.com/go-gl/glfw/blob/master/README.md
       run: sudo apt-get install -y libgl1-mesa-dev xorg-dev
 
